# rdma_kv

./: .gitignore  CMakeLists.txt  README.md
docs/: DESIGN.md
examples/: client_main.c  server_main.c
include/: hash_table.h  kv_store.h  memory_pool.h  rdma_common.h
src/: hash_table.c  kv_store.c  memory_pool.c  rdma_common.c
tests/: test_hash_table.c  test_memory_pool.c
